--- a/wiki/it/Macro_documentation.html
+++ b/wiki/it/Macro_documentation.html
@@ -11,11 +11,8 @@
 <h2><span class="mw-headline" id="Descrizione">Descrizione</span></h2>
 <p>Tutte le macro devono essere documentate correttamente, nello stesso modo in cui vengono documentati i <a href="../it/Gui_Command.html" title="Gui Command/it">comandi GUI</a>.
 </p><p>Dovrebbero avere una pagina wiki individuale e dovrebbero essere elencate in una delle categorie nella <a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a>.
+</p><p>La pagina della <a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a> contiene una buona selezione di macro create da utenti esperti e molte di esse possono essere installate direttamente da <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The <a href="../Macros_recipes.html" title="Macros recipes">Macros recipes</a> page has a good selection of macros created by experienced users, and many of them can be directly installed from the <a href="../Std_AddonMgr.html" title="Std AddonMgr">Addon Manager</a>.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>See <a href="../GuiCommand_model.html" title="GuiCommand model">GuiCommand model</a> and macro pages like <a href="../Macro_Loft.html" title="Macro Loft">Macro Loft</a> and <a href="../Macro_Site_From_Contours.html" title="Macro Site From Contours">Macro Site From Contours</a> to see how macros should be documented. At least two sections should be included, a <i>Description</i> section with general usage information, and a <i>Script</i> section to hold the actual macro code. Other sections may be included as needed to explain with more detail the usage of the macro.
 </p>
@@ -295,13 +292,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126165447
+Cached time: 20260126165510
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.097 seconds
-Preprocessor visited node count: 340/1000000
+CPU time usage: 0.071 seconds
+Real time usage: 0.096 seconds
+Preprocessor visited node count: 339/1000000
 Post&#8208;expand include size: 2987/2097152 bytes
 Template argument size: 2042/2097152 bytes
 Highest expansion depth: 5/100
@@ -311,18 +308,18 @@ Unstrip post&#8208;expand size: 10021/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.393      1 -total
- 16.97%    3.121      5 Template:Code
- 14.46%    2.659      1 Template:ColoredParagraph
- 12.52%    2.303      1 Template:Codeextralink
- 11.42%    2.101      7 Template:Incode
- 11.15%    2.050      1 Template:Caption
-  9.22%    1.696      1 Template:MenuCommand
-  8.07%    1.485      4 Template:Emphasis
-  7.59%    1.396      1 Template:TOCright
+100.00%   17.118      1 -total
+ 20.09%    3.439      5 Template:Code
+ 16.71%    2.861      1 Template:Codeextralink
+ 12.86%    2.202      1 Template:ColoredParagraph
+  9.56%    1.636      1 Template:MenuCommand
+  8.47%    1.449      1 Template:TOCright
+  8.34%    1.428      1 Template:Caption
+  8.01%    1.371      7 Template:Incode
+  7.01%    1.200      4 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165447 and revision id 1744428. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165510 and revision id 1744430. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
