--- a/wiki/it/Macro_documentation.html
+++ b/wiki/it/Macro_documentation.html
@@ -12,11 +12,8 @@
 <p>Tutte le macro devono essere documentate correttamente, nello stesso modo in cui vengono documentati i <a href="../it/Gui_Command.html" title="Gui Command/it">comandi GUI</a>.
 </p><p>Dovrebbero avere una pagina wiki individuale e dovrebbero essere elencate in una delle categorie nella <a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a>.
 </p><p>La pagina della <a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a> contiene una buona selezione di macro create da utenti esperti e molte di esse possono essere installate direttamente da <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
+</p><p>Consultare <a href="../it/GuiCommand_model.html" title="GuiCommand model/it">modello GuiCommand</a> e pagine macro come <a href="../it/Macro_Loft.html" title="Macro Loft/it">Macro Loft</a> e <a href="../it/Macro_Site_From_Contours.html" title="Macro Site From Contours/it">Macro Site From Contours</a> per informazioni su come documentare le macro. &Egrave; necessario includere almeno due sezioni: una sezione <i>Descrizione</i> con informazioni generali sull'utilizzo e una sezione <i>Script</i> per contenere il codice macro vero e proprio. &Egrave; possibile includere altre sezioni, se necessario, per spiegare in modo pi&ugrave; dettagliato l'utilizzo della macro.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>See <a href="../GuiCommand_model.html" title="GuiCommand model">GuiCommand model</a> and macro pages like <a href="../Macro_Loft.html" title="Macro Loft">Macro Loft</a> and <a href="../Macro_Site_From_Contours.html" title="Macro Site From Contours">Macro Site From Contours</a> to see how macros should be documented. At least two sections should be included, a <i>Description</i> section with general usage information, and a <i>Script</i> section to hold the actual macro code. Other sections may be included as needed to explain with more detail the usage of the macro.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>If a macro provides a well defined functionality, and is well documented, it could be included eventually as part of a new or an existing <a href="../Workbenches.html" title="Workbenches">workbench</a>.
 </p>
@@ -292,13 +289,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126165510
+Cached time: 20260126165809
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.096 seconds
-Preprocessor visited node count: 339/1000000
+CPU time usage: 0.069 seconds
+Real time usage: 0.098 seconds
+Preprocessor visited node count: 338/1000000
 Post&#8208;expand include size: 2987/2097152 bytes
 Template argument size: 2042/2097152 bytes
 Highest expansion depth: 5/100
@@ -308,18 +305,18 @@ Unstrip post&#8208;expand size: 10021/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   17.118      1 -total
- 20.09%    3.439      5 Template:Code
- 16.71%    2.861      1 Template:Codeextralink
- 12.86%    2.202      1 Template:ColoredParagraph
-  9.56%    1.636      1 Template:MenuCommand
-  8.47%    1.449      1 Template:TOCright
-  8.34%    1.428      1 Template:Caption
-  8.01%    1.371      7 Template:Incode
-  7.01%    1.200      4 Template:Emphasis
+100.00%   20.751      1 -total
+ 19.51%    4.049      5 Template:Code
+ 15.33%    3.181      1 Template:MenuCommand
+ 13.64%    2.831      1 Template:Codeextralink
+ 11.74%    2.437      1 Template:ColoredParagraph
+ 10.17%    2.110      1 Template:Caption
+  8.49%    1.762      1 Template:TOCright
+  6.14%    1.274      4 Template:Emphasis
+  6.13%    1.271      7 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165510 and revision id 1744430. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165809 and revision id 1744432. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
