--- a/wiki/it/Macro_documentation.html
+++ b/wiki/it/Macro_documentation.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_documentation.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodokumentation (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_documentation.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro documentation (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_documentation.html" class="mw-pt-progress mw-pt-progress--complete" title="Documentation pour les macros (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_documentation.html" class="mw-pt-progress mw-pt-progress--complete" title="Makrodefinicja: Dokumentacja (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_documentation.html" class="mw-pt-progress mw-pt-progress--med" title="&#1044;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;&#1088;&#1086;&#1074;&#1072;&#1085;&#1080;&#1077; &#1052;&#1072;&#1082;&#1088;&#1086;&#1089;&#1086;&#1074; (23% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
@@ -13,11 +13,8 @@
 </p><p>Dovrebbero avere una pagina wiki individuale e dovrebbero essere elencate in una delle categorie nella <a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a>.
 </p><p>La pagina della <a href="../it/Macros_recipes.html" title="Macros recipes/it">Raccolta di macro</a> contiene una buona selezione di macro create da utenti esperti e molte di esse possono essere installate direttamente da <a href="../it/Std_AddonMgr.html" title="Std AddonMgr/it">Addon Manager</a>.
 </p><p>Consultare <a href="../it/GuiCommand_model.html" title="GuiCommand model/it">modello GuiCommand</a> e pagine macro come <a href="../it/Macro_Loft.html" title="Macro Loft/it">Macro Loft</a> e <a href="../it/Macro_Site_From_Contours.html" title="Macro Site From Contours/it">Macro Site From Contours</a> per informazioni su come documentare le macro. &Egrave; necessario includere almeno due sezioni: una sezione <i>Descrizione</i> con informazioni generali sull'utilizzo e una sezione <i>Script</i> per contenere il codice macro vero e proprio. &Egrave; possibile includere altre sezioni, se necessario, per spiegare in modo pi&ugrave; dettagliato l'utilizzo della macro.
+</p><p>Se una macro fornisce una funzionalit&agrave; ben definita ed &egrave; ben documentata, potrebbe essere inclusa in futuro come parte di un <a href="../it/Workbenches.html" title="Workbenches/it">ambiente di lavoro</a> nuovo o esistente.
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>If a macro provides a well defined functionality, and is well documented, it could be included eventually as part of a new or an existing <a href="../Workbenches.html" title="Workbenches">workbench</a>.
-</p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="New_macro_page">New macro page</span></h2>
 </div>
@@ -289,13 +286,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126165809
+Cached time: 20260126165842
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.098 seconds
-Preprocessor visited node count: 338/1000000
+CPU time usage: 0.058 seconds
+Real time usage: 0.084 seconds
+Preprocessor visited node count: 337/1000000
 Post&#8208;expand include size: 2987/2097152 bytes
 Template argument size: 2042/2097152 bytes
 Highest expansion depth: 5/100
@@ -305,18 +302,18 @@ Unstrip post&#8208;expand size: 10021/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.751      1 -total
- 19.51%    4.049      5 Template:Code
- 15.33%    3.181      1 Template:MenuCommand
- 13.64%    2.831      1 Template:Codeextralink
- 11.74%    2.437      1 Template:ColoredParagraph
- 10.17%    2.110      1 Template:Caption
-  8.49%    1.762      1 Template:TOCright
-  6.14%    1.274      4 Template:Emphasis
-  6.13%    1.271      7 Template:Incode
+100.00%   15.501      1 -total
+ 16.81%    2.606      1 Template:ColoredParagraph
+ 16.65%    2.581      5 Template:Code
+ 15.01%    2.327      1 Template:Codeextralink
+  9.66%    1.497      1 Template:TOCright
+  9.20%    1.426      7 Template:Incode
+  8.51%    1.319      1 Template:Caption
+  7.86%    1.219      4 Template:Emphasis
+  7.35%    1.139      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165809 and revision id 1744432. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165842 and revision id 1744434. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
