--- a/wiki/it/Macro_documentation.html
+++ b/wiki/it/Macro_documentation.html
@@ -17,10 +17,8 @@
 </p><p><span id="New_macro_page"></span>
 </p>
 <h2><span class="mw-headline" id="Pagina_nuova_macro">Pagina nuova macro</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<p>The original page must be written in English. After one of the administrators has marked it for translation, it can be translated into another language.
+<p>La pagina originale deve essere scritta in inglese. Dopo che uno degli amministratori l'avr&agrave; contrassegnata per la traduzione, potr&agrave; essere tradotta in un'altra lingua.
 </p>
-</div>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>Create a new page for the macro starting with the word <code>Macro_</code> followed by the name of the macro, for example, <code>Macro_Excellent_Modification</code>. To link to the page use: <code>[[Macro_Excellent_Modification|Macro Excellent Modification]]</code>.
 </p>
@@ -285,13 +283,13 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/8d40ab6c018c2bde678
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260126165904
+Cached time: 20260126165915
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.081 seconds
-Real time usage: 0.107 seconds
-Preprocessor visited node count: 337/1000000
+CPU time usage: 0.057 seconds
+Real time usage: 0.077 seconds
+Preprocessor visited node count: 336/1000000
 Post&#8208;expand include size: 2987/2097152 bytes
 Template argument size: 2042/2097152 bytes
 Highest expansion depth: 5/100
@@ -301,18 +299,18 @@ Unstrip post&#8208;expand size: 10021/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.488      1 -total
- 20.48%    4.402      5 Template:Code
- 11.64%    2.502      1 Template:ColoredParagraph
- 10.95%    2.352      1 Template:Codeextralink
- 10.59%    2.276      1 Template:Caption
-  9.79%    2.103      7 Template:Incode
-  9.24%    1.986      1 Template:MenuCommand
-  8.59%    1.846      4 Template:Emphasis
-  8.43%    1.812      1 Template:TOCright
+100.00%   15.416      1 -total
+ 24.41%    3.764      5 Template:Code
+ 12.55%    1.935      1 Template:Caption
+ 10.57%    1.630      1 Template:ColoredParagraph
+  9.92%    1.529      1 Template:Codeextralink
+  8.91%    1.373      7 Template:Incode
+  8.78%    1.354      1 Template:TOCright
+  8.38%    1.292      1 Template:MenuCommand
+  7.96%    1.227      4 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165904 and revision id 1744436. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:130842-0!canonical and timestamp 20260126165915 and revision id 1744438. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
